@@ -6,6 +6,9 @@ Changelog for 1.3.22
 * Fixed error when trying to save multiple make/models for a part (Chris T)
 * Better error handling when date is entered into statement balance (Chris T)
 * Added pricegroup selection back to entity credit account (Chris T, 3550056)
+* Fix for slow performance with Form->all_years (Chris T, h/t Neil S)
+
+Niel S is Neil Smith
 
 Changelog for 1.3.21
 * Added a default numberformat in Form.pm (Chris T)
